# CryPay

./: .env  Cargo.toml  README.md  dfx.json  package.json
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/crypay/: constructor.did  constructor.old.did  crypay.wasm  index.js  service.did.d.ts  service.did.js
CryPay/Crypat_app/: README.md  dfx.json  package.json
CryPay/Crypat_app/crypay/: Cargo.toml
src/: lib.rs
