[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.6"
ic-cdk-macros = "0.6.9"
ic-ledger-types = "0.4.0"
serde = "1.0.193"
ic-stable-structures = "0.5.4"
serde_derive = "1.0.126"

[dev-dependencies]
tempfile = "3.2.0"


